# tribles-python

./: Cargo.toml  pyproject.toml
notebooks/: experiments.py
src/: lib.rs
