[package]
name = "tribles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tribles"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
tribles = { git = "https://github.com/triblespace/tribles-rust.git" }
hex = "0.4.3"
parking_lot = {version = "0.12.3", features=["arc_lock", "send_guard"]}
macro_pub = "0.1.0"
itertools = "0.13.0"